--- a/WebFileManager/Views/Home/Index.cshtml
+++ b/WebFileManager/Views/Home/Index.cshtml
@@ -5,9 +5,18 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <form>
-        <button data="file">Upload File</button>
-        <button type="submit"></button>
+    <form method="post" enctype="multipart/form-data" asp-controller="FileUpload" asp-action="Index">
+        <div class="form-group">
+            <div class="col-md-10">
+                <p>Upload one or more files using this form:</p>
+                <input type="file" name="files" multiple />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" value="Upload" />
+            </div>
+        </div>
     </form>
     <h2>Files</h2>
     <table class="table">
