--- a/WebFileManager/Views/Shared/_Layout.cshtml
+++ b/WebFileManager/Views/Shared/_Layout.cshtml
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebFileManager.styles.css" asp-append-version="true" />
+    <style>
+       ul.hr {
+            margin: 0; /* Обнуляем значение отступов */
+            padding: 4px; /* Значение полей */
+       }
+       ul.hr li {
+            display: inline; /* Отображать как строчный элемент */
+            margin-right: 5px; /* Отступ слева */
+            border: 1px solid #0000; /* Рамка вокруг текста */
+            padding: 3px; /* Поля вокруг текста */
+       }
+    </style>
 </head>
 <body>
     <header>
